# theodora

./: .gitignore  CLAUDE.md  IMPRESSUM.md  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: extract_layout.py  gen_enums.py  gen_field_dims.py  gen_models.py  gen_samples.py
spec/: .gitignore  FROZEN.md  README.md
src/theodora/: __init__.py  cli.py
src/theodora/agent/: __init__.py  extract.py  llm.py  reconcile.py  remediate.py
src/theodora/domain/: __init__.py  _field_dims.py  enums.py  templates.py
src/theodora/generate/: __init__.py  _samples.py  builder.py
src/theodora/io/: __init__.py  excel.py  writer.py
src/theodora/validation/: __init__.py  arelle_check.py  engine.py
tests/: test_crosscheck.py  test_excel.py  test_extract.py  test_generate.py  test_l1.py  test_l2.py  test_l3.py  test_l4.py  test_reconcile.py  test_remediate.py
